Revert "feat: accept tenant id passed as superadmin for agency create"